<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_teleop</name>
  <version>2.3.7</version>
  <description>
    Teleoperation nodes using keyboard or Xbox controller for TurtleBot3.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="willson@robotis.com">Will Son</author>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
